# lexi_data_pipeline

./: .gitignore  README.md  pyproject.toml
pipeline/: check_files.py  combine_gifs.py  compress_folders.py  create_file_list.py  create_l1a_files.py  create_time_lapse_movie.py  discorpy_test_lexi.py  distortion_minimization.py  email.md  get_l1a_files.py  get_l1b_files_hk.py  get_l1b_files_hk_parallel.py  get_l1b_files_sci.py  get_l1b_files_sci_parallel.py  get_l1b_files_sci_parallel_csv.py  get_l1c_files_sci_parallel.py  get_l1c_files_sci_parallel_ground.py  get_l1c_files_sci_parallel_scc.py  get_l1c_files_sci_parallel_v2.py  get_l2_files.py  get_lexi_counts_from_sci.py  l1b_processing_sci.py  lexi_linear_correction.py  lexi_roll_angle_mike.py  lxi_file_read_funcs.py  lxi_misc_codes.py  lxi_pipeline_file.py  lxi_pipeline_test.py  lxi_save_figures.py  make_ra_dec_hist.py  plot_lexi_ra_dec.py  plot_xray.py  quaternions.py  quick_look_plot.py  quick_look_plot.txt  quick_look_plot_v2.py  read_background_pickle.py  read_fits_file.py  read_new_cdf_file.py  save_data_to_cdf.py  (+15 more)
pipeline/ramiz/: coor_head.pro  euler.pro  notes  read_rmf.pro  sxi_cxrb_bkg.pro  sxi_gen_spec.pro  sxi_gti_filt.pro  sxi_read_atti.pro
spdf_data_documents/: data_dictionary.md  global_attributes.md  skeleton_table.md  variables.md
spdf_data_documents/l1b/: data_dictionary.md  global_attributes.md  skeleton_table.md  variables.md
spdf_data_documents/l1c/: bgm1_mn_lexi_0000000000_v0.1.cdf  bgm1_mn_lexi_0000000000_v0.1.skt  bgm1_mn_lexi_00000000_v0.1.cdf  bgm1_mn_lexi_00000000_v0.1.skt  variables.md  (+14 more)
(+6 files in other folders)
